feat: update rodjendan 2024

--- a/Rodjendan2024.ipynb
+++ b/Rodjendan2024.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "4a7d5685-1926-4a44-a2eb-9fd6891cfa3a",
    "metadata": {},
    "outputs": [
@@ -26,33 +26,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ukupno ljudi: 16\n",
+      "Ukupno ljudi: 25\n",
       "Ukupno vegana: 1\n",
       "Ukupno bezglutenskih: 1\n",
-      "Jos uvek nepozvanih: 0\n"
+      "Jos uvek nepozvanih: 0\n",
+      "Muskih: 20, zenskih: 10, odnos: 2×\n"
      ]
     }
    ],
    "source": [
+    "#[derive(Debug, Clone, PartialEq)]\n",
+    "enum Pol {\n",
+    "    Musko,\n",
+    "    Zensko,\n",
+    "    Neznam,\n",
+    "}\n",
+    "\n",
     "#[derive(Debug, Clone)]\n",
     "struct Posetilac {\n",
     "    pub ime: String,\n",
     "    pub pozvan: bool,\n",
     "    pub dolazi: bool,\n",
-    "    pub osoba: u32,\n",
-    "    pub vegan: bool, // at this point, ovo znaci vegetarijansko, al me mrzi da menjam\n",
+    "    pub osoba: u32, // e, jebiga, novi addon za pol ne radi sa dodatnim ljudima, makar znao njihove polove… morao bi refactor, a onda bih morao novu struct, i tako…\n",
+    "    pub vegan: bool, // at this point, ovo znaci vegetarijansko, al me mrzi da menjam ;; ne znaci cak ni vegetarijansko sada, al' opet nema veze :)\n",
     "    pub bezglutenski: bool,\n",
+    "    pub pol: Pol,\n",
     "}\n",
     "\n",
     "impl Posetilac {\n",
     "    fn new(ime: &str) -> Self {\n",
-    "        Self { ime: ime.to_owned(), pozvan: false, dolazi: false, osoba: 1, vegan: false, bezglutenski: false }\n",
+    "        Self { ime: ime.to_owned(), pozvan: false, dolazi: false, osoba: 1, vegan: false, bezglutenski: false, pol: Pol::Neznam }\n",
     "    }\n",
     "    fn pozvan(self) -> Self {\n",
-    "        Self { pozvan: true, ..self }\n",
+    "        Self { pozvan: true, pol: Pol::Musko, ..self }\n",
     "    }\n",
     "    fn pozvana(self) -> Self {\n",
-    "        Self { pozvan: true, ..self }\n",
+    "        Self { pozvan: true, pol: Pol::Zensko, ..self }\n",
     "    }\n",
     "    fn dolazi(self) -> Self {\n",
     "        Self { dolazi: true, ..self }\n",
@@ -74,7 +83,7 @@
     "        .dolazi(),\n",
     "    Posetilac::new(\"Milena\")\n",
     "        .bezglutenski()\n",
-    "        .pozvan()\n",
+    "        .pozvana()\n",
     "        .dolazi(),\n",
     "    Posetilac::new(\"Mrkic\")\n",
     "        .pozvan()\n",
@@ -99,7 +108,7 @@
     "        .pozvan()\n",
     "        .dolazi(),\n",
     "    Posetilac::new(\"Tomic\")\n",
-    "        .pozvan(),\n",
+    "        .pozvan(), // ne moze\n",
     "    Posetilac::new(\"Marko\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
@@ -117,7 +126,7 @@
     "        .dolazi(),\n",
     "    Posetilac::new(\"Pujo\")\n",
     "        .pozvan()\n",
-    "        .dolazi(),\n",
+    "        .dolazi(), // ako bude u bg\n",
     "    Posetilac::new(\"Lero\")\n",
     "        .pozvan()\n",
     "        .dodaj(1),\n",
@@ -125,6 +134,38 @@
     "        .pozvana()\n",
     "        .dolazi(),\n",
     "    Posetilac::new(\"Ivka\")\n",
+    "        .pozvana()\n",
+    "        .dolazi(), // verovatno dolazi sa Jovanom\n",
+    "    Posetilac::new(\"Cakic\")\n",
+    "        .pozvan(), // ne moze\n",
+    "    Posetilac::new(\"Isidora\")\n",
+    "        .pozvana()\n",
+    "        .dodaj(1)\n",
+    "        .dolazi(),\n",
+    "    Posetilac::new(\"Tommi\")\n",
+    "        .pozvan(),\n",
+    "    Posetilac::new(\"Rista\")\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
+    "    // Biznis, protok kapitala\n",
+    "    Posetilac::new(\"Tijana\")\n",
+    "        .pozvana()\n",
+    "        .dodaj(1) // Milos\n",
+    "        .dolazi(),\n",
+    "    Posetilac::new(\"Adrijana\")\n",
+    "        .pozvana()\n",
+    "        .dolazi(),\n",
+    "    Posetilac::new(\"Stefan Ivanov\")\n",
+    "        .pozvan()\n",
+    "        .dodaj(1)\n",
+    "        .dolazi(),\n",
+    "    Posetilac::new(\"Bojan\")\n",
+    "        .pozvan(), // javice\n",
+    "    Posetilac::new(\"Jovan Tatic\")\n",
+    "        .pozvan(), // javice\n",
+    "    Posetilac::new(\"Stefan Maksovic\")\n",
+    "        .pozvan(),\n",
+    "    Posetilac::new(\"Andjela\")\n",
     "        .pozvana(),\n",
     "];\n",
     "\n",
@@ -142,7 +183,15 @@
     "println!(\"Ukupno bezglutenskih: {}\", &bezglutenskih);\n",
     "println!(\"Jos uvek nepozvanih: {}\", pozvani.iter().fold(0, |acc, p| {\n",
     "    acc + if p.pozvan { 0 } else { 1 }\n",
-    "}));"
+    "}));\n",
+    "let muskih = pozvani.iter().fold(0, |acc, p| {\n",
+    "    acc + if p.pol == Pol::Musko { 1 } else { 0 }\n",
+    "});\n",
+    "let zenskih = pozvani.iter().fold(0, |acc, p| {\n",
+    "    acc + if p.pol == Pol::Zensko { 1 } else { 0 }\n",
+    "});\n",
+    "let odnos = (muskih as f64) / (zenskih as f64);\n",
+    "println!(\"Muskih: {}, zenskih: {}, odnos: {}×\", muskih, zenskih, odnos);"
    ]
   },
   {
@@ -155,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "ddfe3308-64e6-4893-9274-243d3cb5e980",
    "metadata": {},
    "outputs": [
@@ -163,10 +212,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ukupno para: 0 din\n",
-      "Za 62 ljudi\n",
+      "Ukupno para: 12600 din\n",
+      "Za 68 ljudi\n",
       "Za 50 vegana\n",
-      "Za 38 bezglutenskih\n"
+      "Za 44 bezglutenskih\n"
      ]
     }
    ],
@@ -222,19 +271,22 @@
     "        .vegansko()\n",
     "        .za(6.)\n",
     "        .komada(2), // takvo pakovanje u aromi\n",
-    "    Posluzenje::new(\"Falafel, kg\") // petak\n",
+    "    Posluzenje::new(\"Razna peciva, kg\") // wolt\n",
+    "        .url(\"Kircanski\")\n",
     "        .vegansko()\n",
     "        .za(12.)\n",
-    "        .komada(1),\n",
+    "        .komada(1), // ? otkud znam, smislicu\n",
     "    Posluzenje::new(\"Prebranac, kg\") // petak\n",
     "        .vegansko()\n",
     "        .bezglutensko()\n",
     "        .za(6.)\n",
     "        .komada(1),\n",
     "    Posluzenje::new(\"Pecenje, kg\") // naruciti\n",
+    "        .url(\"https://pecenjaramarinkovic.rs/\")\n",
+    "        .cena(2100)\n",
     "        .bezglutensko()\n",
     "        .za(3.)\n",
-    "        .komada(4),\n",
+    "        .komada(6),\n",
     "    Posluzenje::new(\"Hleb\")\n",
     "        .vegansko()\n",
     "        .za(4.)\n",
@@ -265,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "a6b71d78-60c6-4145-9802-c9ecbf8044a1",
    "metadata": {},
    "outputs": [
@@ -343,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "71d2fd97-5e60-4b42-8316-8f809d42c9a3",
    "metadata": {},
    "outputs": [
@@ -351,11 +403,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Suvise hrane (5.636363636363637× vise)\n",
-      "Suvise veganske hrane (inf× vise)\n",
-      "Suvise bezglutenske hrane (38× vise)\n",
-      "Suvise pica (4.318181818181818× vise)\n",
-      "Ukupan trosak za slavu: 3840 din\n"
+      "Suvise hrane (2.8333333333333335× vise)\n",
+      "Suvise veganske hrane (50× vise)\n",
+      "Suvise bezglutenske hrane (44× vise)\n",
+      "Suvise pica (1.9791666666666667× vise)\n",
+      "Ukupan trosak za rodjendan: 16440 din\n"
      ]
     }
    ],
@@ -389,7 +441,7 @@
     "}\n",
     "\n",
     "let ukupan_trosak = para_za_posluzenje + para_za_pice;\n",
-    "println!(\"Ukupan trosak za slavu: {} din\", &ukupan_trosak);"
+    "println!(\"Ukupan trosak za rodjendan: {} din\", &ukupan_trosak);"
    ]
   }
  ],
